tests/valid/definite/BoolList_Valid_1.whiley
void System::main([string] args):
    ls = [true,false,true]
    print str(ls)
    x = ls[0]
    print str(x)
    ls[0] = false
    print str(ls)
