tests/invalid/simple/For_CompileFail_1.whiley
void System::main([string] args):
    string st = "Hello World"
    for st in args:
        print st
